speed up delete(id: long)